<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView1"
    tools:context=".activity_my">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/purple_200"
                android:layout_gravity="center" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/last_name"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"/>

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/region"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/occupation"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/place_work_study"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/lives"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/works_per_day"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/salary"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/hobby"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/loves"
                        android:textColor="@color/purple_500"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/brad"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/pitt"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/argentina"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/programmer"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/google"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/las_vegas"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/_7_hours"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/_4000"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/football"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/listening_songs"
                        android:textColor="#03A9F4"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>